--- a/app/views/factory/admin/purchase_items/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/purchase_items/_base/_index_tr.html.erb
@@ -8,10 +8,10 @@
       <%= button_to({ action: 'update', id: model.id }, method: :patch, params: { item: { purchase_status: 'init' } }, aria: { label: t('.update.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-tractor has-text-danger"></i>
       <% end if ['received'].include?(model.purchase_status) %>
-      <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info has-text-info"></i>
       <% end %>
-      <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil has-text-link"></i>
       <% end %>
     </div>
