--- a/app/views/factory/admin/product_taxons/_all/_factory_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_all/_factory_tbody.html.erb
@@ -1,6 +1,6 @@
 <td>
   <span><%= model.name %></span>
-  <%= link_to({ action: 'new', factory_taxon_id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.new.title') }, class: 'button is-small is-rounded is-light') do %>
+  <%= button_to({ action: 'new', factory_taxon_id: model.id }, aria: { label: t('.new.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-plus has-text-primary"></i>
   <% end %>
 </td>
