--- a/app/views/factory/admin/product_taxons/all.html.erb
+++ b/app/views/factory/admin/product_taxons/all.html.erb
@@ -1,6 +1,6 @@
 <%= render layout: 'index_table' do %>
   <% @product_taxons.group_by(&:factory_taxon).each do |taxon, product_taxons| %>
-    <%= render partial: 'taxon_tbody', locals: { taxon: taxon, size: product_taxons.size + 1 } if taxon %>
+    <%= render partial: 'taxon_tbody', locals: { taxon: taxon, size: product_taxons.size + 1 } %>
     <%= render partial: 'index_tbody', layout: 'index_tr', collection: product_taxons, as: :model %>
   <% end %>
   <%= render partial: 'factory_tbody', layout: 'factory_tr', collection: @factory_taxons, as: :model %>
