--- a/app/views/factory/in/productions/_index/_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_cart.html.erb
@@ -5,11 +5,11 @@
         <i class="fa-solid fa-xl fa-circle-minus has-text-dark-grey"></i>
       </button>
     <% else %>
-      <%= button_to({ controller: 'trade/in/items', action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, data: { turbo_scroll: true }, class: 'mr-1') do %>
+      <%= button_to({ controller: item_con, action: 'destroy', id: item.id }, method: :delete, params: { current_cart_id: @cart.id }, data: { turbo_scroll: true }, class: 'mr-1') do %>
         <i class="fa-solid fa-xl fa-circle-minus has-text-grey"></i>
       <% end %>
     <% end %>
-    <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true }, class: 'ml-1' do |f| %>
+    <%= form_with theme: nil, scope: 'item', url: { controller: item_con, action: 'update', id: item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true }, class: 'ml-1' do |f| %>
       <%= f.hidden_field :current_cart_id, value: @cart.id %>
       <%= f.number_field :number, value: item.number.to_human, data: { action: 'change->input#form', modify_target: 'input' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
     <% end %>
@@ -18,7 +18,7 @@
     </button>
   </div>
 <% else %>
-  <%= form_with theme: nil, url: { controller: 'trade/in/items', action: 'create' }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'ml-1 button_to' do |f| %>
+  <%= form_with theme: nil, url: { controller: item_con, action: 'create' }, state: 'redirect_return', data: { turbo_scroll: true }, class: 'ml-1 button_to' do |f| %>
     <%= f.hidden_field :current_cart_id, value: @cart.id %>
     <%= f.hidden_field :good_type, value: model.class_name %>
     <%= f.hidden_field :good_id, value: model.id %>
