--- a/app/views/factory/productions/index.html.erb
+++ b/app/views/factory/productions/index.html.erb
@@ -4,5 +4,5 @@
   </div>
 </div>
 <div class="column is-narrow">
-  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/my/carts' } if @cart %>
+  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/my/carts', cart: @cart } if @cart %>
 </div>
