--- a/app/views/factory/productions/_index/_card.html.erb
+++ b/app/views/factory/productions/_index/_card.html.erb
@@ -9,6 +9,10 @@
     <%= link_to model.name, { action: 'show', id: model.id } %>
   </div>
   <div class="card-footer py-2">
-    <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: @cart && @cart.find_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) } %>
+  <% if @items.key?(model.id) %>
+    <%= render partial: 'cart', locals: { model: model, item_con: item_con, item: @items[model.id] } %>
+  <% else %>
+    <%= render partial: 'add_cart', locals: { model: model, item_con: item_con } %>
+  <% end %>
   </div>
 </div>
