--- a/app/views/factory/admin/products/_buy/_production.html.erb
+++ b/app/views/factory/admin/products/_buy/_production.html.erb
@@ -1,5 +1,3 @@
-<% item = @cart.organ_item(purchase_id: model.id) %>
-
 <tr id="tr_<%= model.product_id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td><span class="pl-4"><%= model.name %></span></td>
   <td><span class="has-text-danger pl-1"><%= model.cost_price.to_money.format.html_safe %></span></td>
@@ -17,18 +15,21 @@
     <% model.upstream_provides.each do |pp| %>
       <div>
         <span class="pr-1"><%= pp.provider.name %></span>
-        <%= button_to({ controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: pp.provider_id, current_cart_id: @cart.id } }) do %>
-          <i class="fa-solid fa-check has-text-info"></i>
-        <% end if item && item.organ_id != pp.provider_id %>
-        <%= button_to({ controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil, current_cart_id: @cart.id } }) do %>
-          <i class="fa-solid fa-times has-text-danger"></i>
-        <% end if item && item.organ_id == pp.provider_id %>
+        <% if item = @cart.organ_item(purchase_id: model.id, good_id: pp.upstream_production_id) %>
+          <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model, item: item } %>
+          <%= button_to({ controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: pp.provider_id, current_cart_id: @cart.id } }) do %>
+            <i class="fa-solid fa-check has-text-info"></i>
+          <% end if item && item.organ_id != pp.provider_id %>
+          <%= button_to({ controller: 'trade/in/items', action: 'update', id: item.id }, method: :patch, params: { item: { organ_id: nil, current_cart_id: @cart.id } }) do %>
+            <i class="fa-solid fa-times has-text-danger"></i>
+          <% end if item && item.organ_id == pp.provider_id %>
+        <% else %>
+          <%= render partial: 'add_purchase_cart', locals: { item_con: 'trade/in/items', model: model, cart: @cart } %>
+        <% end %>
       </div>
     <% end %>
   </td>
-  <td class="has-text-centered">
-    <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model, item: item } %>
-  </td>
+  <td class="has-text-centered"></td>
   <td>
     <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-solid fa-circle-info has-text-info"></i>
