--- a/app/views/factory/admin/base/_product_taxon_breadcrumb.html.erb
+++ b/app/views/factory/admin/base/_product_taxon_breadcrumb.html.erb
@@ -1,7 +1,9 @@
 <li><%= link_to t('.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
 <li>
-  <span class="pl-3"><%= @product_taxon.name %></span>
-  <% if @product_taxon.factory_taxon %>
-    <span class="pr-3 has-text-grey">（<%= @product_taxon.factory_taxon.name %>）</span>
-  <% end %>
+  <div class="px-3">
+    <span><%= @product_taxon.name %></span>
+    <% if @product_taxon.factory_taxon %>
+      <span class="has-text-grey">（<%= @product_taxon.factory_taxon.name %>）</span>
+    <% end %>
+  </div>
 </li>
