--- a/app/views/factory/admin/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tbody.html.erb
@@ -17,19 +17,19 @@
   <% end %>
 </td>
 <td>
-  <div class="has-block-right">
+  <div>
     <span><%= model.cost_price.to_money.format.html_safe %></span>
     <%= button_to({ action: 'cost', id: model.id }, data: { show_target: 'item' }, aria: { label: t('factory.admin.productions.cost.title') }, style: 'visibility: hidden') do %>
       <i class="fa-solid fa-fw fa-sm fa-tags has-text-grey"></i>
     <% end %>
   </div>
-  <div class="has-block-right">
+  <div>
     <span><%= model.profit_price.to_money.format.html_safe %></span>
     <%= button_to({ action: 'price', id: model.id }, data: { show_target: 'item' }, aria: { label: t('factory.admin.productions.price.title') }, style: 'visibility: hidden') do %>
       <i class="fa-solid fa-fw fa-sm fa-tags has-text-grey"></i>
     <% end %>
   </div>
-  <div class="has-block-right has-text-danger">
+  <div class="has-text-danger">
     <span class="mr-5"><%= model.price.to_money.format.html_safe %></span>
   </div>
 </td>
