--- a/app/views/factory/admin/products/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_base/_index_thead.html.erb
@@ -1,8 +1,8 @@
 <th style="width: 1.25em"></th>
 <th>
   <span><%= Factory::Product.human_attribute_name(:name) %></span>
-  <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
-    <i class="fa-solid fa-cog"></i>
+  <%= button_to({ controller: 'com/admin/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, aria: { label: t('com.admin.blob_defaults.add.title') }) do %>
+    <i class="fa-solid fa-cog has-text-grey"></i>
   <% end %>
 </th>
 <th><%= Factory::Product.human_attribute_name(:description) %></th>
