--- a/app/views/admin/_factory_simple_nav.html.erb
+++ b/app/views/admin/_factory_simple_nav.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="menu empty" class="<%= active_helper(modules: ['factory/admin', 'factory/in'], active: 'menu ex-accordion is-active', item: 'menu ex-accordion') %>">
+<div data-controller="menu empty" class="<%= active_helper(modules: ['factory/admin', 'factory/in'], active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>">
   <a data-action="menu#toggle" class="menu-label">
     <i class="fa-solid fa-fw fa-store"></i>
     <span><%= t('factory.admin.title') %></span>
