--- a/app/views/factory/admin/products/_all/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_all/_index_thead.html.erb
@@ -1,12 +1,8 @@
 <th>
-  <p>
-    <span><%= Factory::Product.human_attribute_name(:name) %></span>
-    <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
-      <i class="fa-solid fa-cog"></i>
-    <% end %>
-  </p>
+  <p><%= Factory::Product.human_attribute_name(:name) %></p>
   <p><%= Factory::Product.human_attribute_name(:description) %></p>
 </th>
+<th><%= Factory::Product.human_attribute_name(:productions_count) %></th>
 <th><%= Factory::Product.human_attribute_name(:product_taxon_id) %></th>
 <th>
   <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
