--- a/app/views/factory/admin/products/_buy/_production.html.erb
+++ b/app/views/factory/admin/products/_buy/_production.html.erb
@@ -18,7 +18,7 @@
   <% model.upstream_provides.each do |pp| %>
     <tr>
       <td>
-      <% if item = @cart.organ_item(purchase_id: model.id, good_id: pp.upstream_production_id) %>
+      <% if item = @cart.find_item(purchase_id: model.id, good_id: pp.upstream_production_id) %>
         <%= render partial: 'purchase_cart', locals: { item_con: 'trade/in/items', model: model, item: item } %>
       <% else %>
         <%= render partial: 'add_purchase_cart', locals: { cart: @cart, item_con: 'trade/in/items', model: model, good_id: pp.upstream_production_id } %>
@@ -27,7 +27,7 @@
       <td><%= pp.provider.name %></td>
     </tr>
   <% end %>
-  <% if item = @cart.organ_item(purchase_id: model.id, good_id: nil) %>
+  <% if item = @cart.find_item(purchase_id: model.id, good_id: nil) %>
     <%= render partial: 'purchase_cart_assign', locals: { model: model, item: item } %>
   <% else %>
     <%= render partial: 'add_purchase_cart_assign', locals: { model: model } %>
