--- a/app/views/factory/admin/taxon/products/index.html.erb
+++ b/app/views/factory/admin/taxon/products/index.html.erb
@@ -1,6 +1,8 @@
+<%= render 'product_taxon_bar' %>
 <%= render 'index_bar' %>
+<%= render 'index_actions' %>
 
-<%= render layout: 'index_table' do %>
+<%= render layout: 'index_sortable_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
 <% end %>
 
