--- a/app/views/factory/admin/product_taxons/_index/_button.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_button.html.erb
@@ -2,7 +2,7 @@
   <%= link_to({ action: 'all', **request.query_parameters.except(:id) }, class: 'button is-link mb-0') do %>
     <i class="fa-solid fa-plus"></i>
     <span class="pl-1"><%= t('.all.title') %></span>
-  <% end %>
+  <% end if @factory_taxons.present? %>
   <%= button_to({ action: 'new', **request.query_parameters.except(:id) }, class: 'button is-info') do %>
     <i class="fa-solid fa-plus"></i>
     <span class="pl-1"><%= t('.new.title') %></span>
