--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -3,7 +3,9 @@
 <% end %>
 <th>
   <p><%= Factory::ProductTaxon.human_attribute_name(:name) %></p>
-  <p><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></p>
+  <% if @scenes.present? %>
+    <p><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></p>
+  <% end %>
 </th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:products_count) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:provides_count) %></th>
