--- a/app/views/factory/admin/productions/_cost/_form.html.erb
+++ b/app/views/factory/admin/productions/_cost/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @production, scope: :production, url: { action: 'update' } do |f| %>
   <%= render 'error_messages', target: f.object %>
-  <%= f.number_field :cost_price, step: 0.01 %>
+  <%= f.number_field :cost_price, step: 0.01, autofocus: true %>
   <%= f.submit %>
 <% end %>
