--- a/app/views/factory/admin/base/_production_bar.html.erb
+++ b/app/views/factory/admin/base/_production_bar.html.erb
@@ -8,22 +8,47 @@
       <%= link_to t('.productions.show.title'), { controller: 'factory/admin/productions', action: 'show', product_id: @production.product_id, id: @production.id } %>
     </li>
     <li class="<%= active_helper(controllers: 'production_plans', active: 'is-active') %>">
-      <%= link_to t('.production_plans.index.title'), { controller: 'factory/admin/production_plans', production_id: @production.id } %>
+      <%= link_to({ controller: 'factory/admin/production_plans', production_id: @production.id }) do %>
+        <i class="fa-solid fa-list has-text-info"></i>
+        <span class="pl-1"><%= t('.production_plans.index.title') %></span>
+      <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'production_items', active: 'is-active') %>">
-      <%= link_to t('.production_items.index.title'), { controller: 'factory/admin/production_items', production_id: @production.id } %>
+      <%= link_to({ controller: 'factory/admin/production_items', production_id: @production.id }) do %>
+        <i class="fa-solid fa-list has-text-info"></i>
+        <span class="pl-1"><%= t('.production_items.index.title') %></span>
+      <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'purchase_items', active: 'is-active') %>">
-      <%= link_to t('.purchase_items.index.title'), { controller: 'factory/admin/purchase_items', production_id: @production.id } %>
+      <%= link_to({ controller: 'factory/admin/purchase_items', production_id: @production.id }) do %>
+        <i class="fa-solid fa-list has-text-success"></i>
+        <span class="pl-1"><%= t('.purchase_items.index.title') %></span>
+      <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'stock_logs', active: 'is-active') %>">
-      <%= link_to t('.stock_logs.index.title'), { controller: 'stock_logs', production_id: @production.id } %>
+      <%= link_to({ controller: 'stock_logs', production_id: @production.id }) do %>
+        <i class="fa-solid fa-clock-rotate-left has-text-info"></i>
+        <span class="pl-1"><%= t('.stock_logs.index.title') %></span>
+      <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'trade_items', active: 'is-active') %>">
-      <%= link_to t('.trade_items.index.title'), { controller: 'trade_items', production_id: @production.id } %>
+      <%= link_to({ controller: 'trade_items', production_id: @production.id }) do %>
+        <i class="fa-solid fa-shopping-cart has-text-info"></i>
+        <span class="pl-1"><%= t('.trade_items.index.title') %></span>
+      <% end %>
+    </li>
+    <li>
+      <%= link_to({ controller: 'rent_charges', production_id: @production.id }) do %>
+        <i class="fa-solid fa-clock-rotate-left has-text-danger"></i>
+        <span><%= t('.rent_charges.index.title') %></span>
+        <span class="pl-1"><%= @production.rent_charges_count %></span>
+      <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'addresses', active: 'is-active') %>">
-      <%= link_to t('.addresses.index.title'), { controller: 'addresses', production_id: @production.id } %>
+      <%= link_to({ controller: 'addresses', production_id: @production.id }) do %>
+        <i class="fa-solid fa-map-marker-alt has-text-warning"></i>
+        <span class="pl-1"><%= t('.addresses.index.title') %></span>
+      <% end %>
     </li>
   </ul>
 </div>
