--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -32,3 +32,8 @@
     <% end %>
   </p>
 </td>
+<td>
+  <%= link_to({ controller: 'fits', product_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+    <span class="pl-1"><%= model.fits_count %></span>
+  <% end %>
+</td>
