--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -7,12 +7,15 @@
   </div>
   <p class="has-text-grey"><%= model.description.to_s.truncate(27) %></p>
 </td>
-<td>
-<% model.productions.each do |production| %>
-  <p>
-    <span><%= production.name %></span>
-  </p>
-<% end %>
+<td colspan="2" class="has-inner-table">
+  <table>
+  <% model.productions.each do |production| %>
+    <tr>
+      <td><%= production.name %></td>
+      <td><%= production.stock %></td>
+    </tr>
+  <% end %>
+  </table>
 </td>
 <td>
   <p><%= model.product_taxon.name %></p>
